--- a/static/less/components/component-contact-form.less
+++ b/static/less/components/component-contact-form.less
@@ -25,6 +25,11 @@ form.contact-form { // Additional specicivity to override grunion.css
         }
     }
 
+    // Send button wrapper
+    .contact-submit {
+        text-align: center;
+    }
+
     // Send button
     // TODO: Refactor in to button component
     input[type="submit"] {
